# virtool-ws

./: README.md  pyproject.toml  run.py
.github/workflows/: ci.yml
tests/: conftest.py
tests/fixtures/: app.py  redis.py  websocket.py
tests/websocket_service/: test_change.py  test_connection.py  test_dispatcher.py  test_service.py
virtool_ws/: app.py  redis.py  startup.py  ws.py
virtool_ws/api/: json.py
virtool_ws/config/: cli.py
virtool_ws/websocket/: change.py  connection.py  dispatcher.py  listener.py
