[tool.poetry]
name = "virtool-ws"
version = "0.1.0"
description = ""
authors = ["Aman Monga <aman260@outlook.com>"]

[tool.poetry.dependencies]
python = "^3.8"
aiohttp = {extras = ["speedups"], version = "^3.8.1"}
click = "^8.0.1"
aiojobs = "^1.0.0"
semver = "^2.13.0"
aioredis = "^1.3.1"
virtool-core = "^1.0.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
pytest-aiohttp = "^1.0.4"
pytest-mock = "^3.6.1"
pre-commit = "^2.16.0"
black = "^21.12b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
